# hazeron_global_scanner

./: CMakeLists.txt  Makefile
includes/retreivers/: fetch_player_data.h
includes/retreivers/common/: common.h  utilities.h
includes/retreivers/online_players/: online_players.h
retreivers/: Makefile  fetch_player_data.c
retreivers/common/: get_page.c  utilities.c  utilities.h
retreivers/online_players/: get_online_players.c  number_online_players.c  online_players.h
